--- a/projetoP2/projetoLP2/.classpath
+++ b/projetoP2/projetoLP2/.classpath
@@ -4,6 +4,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="testes"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="C:/Users/AndréFilipe/Downloads/easyaccept.jar"/>
+	<classpathentry kind="lib" path="/home/danieljdngl/Downloads/easyaccept.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
