--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-[[{"location":"C:\\Users\\AndréFilipe\\Documents\\projeto\\projetoP2\\projetoLP2","type":"PROJECT","hints":{"PROJECT_NAME":"projetoLP2"}},"ABSENT"]]
+[[{"location":"C:\\Program Files\\Java\\jdk1.8.0_121","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"],[{"location":"C:\\Users\\AndréFilipe\\Documents\\projeto\\projetoP2\\projetoLP2","type":"PROJECT","hints":{"PROJECT_NAME":"projetoLP2"}},"ABSENT"]]
